--- a/sales.html
+++ b/sales.html
@@ -6,11 +6,7 @@
 	</head>
 	<body>
     <h1>Sales Data for Pat's Salmon Cookie Stands</hi>
-    <ul id="FirstAndPike"></ul>
-    <ul id="SeaTac"></ul>
-    <ul id="SeattleCenter"></ul>
-    <ul id="CapitalHill"></ul>
-    <ul id="Alki"></ul>
+      <div id="DataStart"></div>
     <script src="app.js"></script>
 	</body>
 </html>
