Fixed output to match specs

--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,7 @@
 		<title>David Smith Week 2 Lab</title>
 	</head>
 	<body>
-    <h1>Sales Data for Pat's Salmon Cookie Stands</hi>
+    <h1>Sales Data for Pat's Salmon Cookie Stands</h1>
       <div id="DataStart"></div>
     <script src="app.js"></script>
 	</body>
