--- a/sales.html
+++ b/sales.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="style.css"/>
+		<link type="text/css" rel="stylesheet" href="sales-style.css"/>
 		<title>David Smith Week 2 Lab</title>
 	</head>
 	<body>
