--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
 		<title>David Smith Week 2 Lab</title>
 	</head>
 	<body>
+	<section id="container">
+		<div class="left">
+			<div class="top left"></div>
+			<div class="bottom left">
+			</div>
+		</div>
+		<div class="right"></div>
+	</section>
 	</body>
 </html>
