basic layout functional

--- a/index.html
+++ b/index.html
@@ -7,11 +7,41 @@
 	<body>
 	<section id="container">
 		<div class="left">
-			<div class="top left"></div>
+			<div class="top left">
+				<img src="images/salmon.png" />
+			</div>
 			<div class="bottom left">
+				<div class="spacer"></div>
+				<h2>Stuff1</h2>
+				<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
+				<h2>Stuff2</h2>
+				<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
+				<h2>Stuff3</h2>
+				<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
+				<h2>Stuff4</h2>
+				<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
+				<h2>Stuff5</h2>
+				<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
+				<h2>Stuff6</h2>
+				<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
+				<div class="spacer"></div>
+				back to top link here
 			</div>
 		</div>
-		<div class="right"></div>
+		<div class="right">
+		<ul class="locations">Locations<p></p>
+			<li>1st and PIKE</li>
+			<p>Address here</p>
+			<li>SEATAC AIRPORT</li>
+			<p>Address here</p>
+			<li>SEATTLE CENTER</li>
+			<p>Address here</p>
+			<li>CAPITOL HILL</li>
+			<p>Address here</p>
+			<li>ALKI</li>
+			<p>Address here</p>
+		</ul>
+		</div>
 	</section>
 	</body>
 </html>
