--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 		<div class="right">
 		<ul class="locations">Locations<p></p>
 			<li>1st and PIKE</li>
-			<p>Address here</p>
+			<li class="addy">Address here</li>
 			<li>SEATAC AIRPORT</li>
-			<p>Address here</p>
+			<li class="addy">Address here</li>
 			<li>SEATTLE CENTER</li>
-			<p>Address here</p>
+			<li class="addy">Address here</li>
 			<li>CAPITOL HILL</li>
-			<p>Address here</p>
+			<li class="addy">Address here</li>
 			<li>ALKI</li>
-			<p>Address here</p>
+			<li class="addy">Address here</li>
 		</ul>
 		</div>
 	</section>
