ddata architecture changed to use storeData to generate objects, improve modularity

--- a/sales.html
+++ b/sales.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
     <h1>Sales Data for Pat's Salmon Cookie Stands</h1>
-      <div id="DataStart"></div>
+			<table id="DataTable"></table>
     <script src="app.js"></script>
 	</body>
 </html>
