--- a/index.html
+++ b/index.html
@@ -5,43 +5,29 @@
 		<title>David Smith Week 2 Lab</title>
 	</head>
 	<body>
-		<section id="container">
-			<div class="left">
-				<div class="top left">
-					<img src="images/salmon.png" />
-				</div>
-				<div class="bottom left">
-					<div class="spacer"></div>
-					<h2>Stuff1</h2>
-					<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
-					<h2>Stuff2</h2>
-					<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
-					<h2>Stuff3</h2>
-					<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
-					<h2>Stuff4</h2>
-					<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
-					<h2>Stuff5</h2>
-					<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
-					<h2>Stuff6</h2>
-					<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
-					<div class="spacer"></div>
-				back to top link here
-				</div>
-			</div>
-			<div class="right">
-				<ul class="locations">Locations<p></p>
-					<li>1st and PIKE</li>
-					<li class="addy">Address here</li>
-					<li>SEATAC AIRPORT</li>
-					<li class="addy">Address here</li>
-					<li>SEATTLE CENTER</li>
-					<li class="addy">Address here</li>
-					<li>CAPITOL HILL</li>
-					<li class="addy">Address here</li>
-					<li>ALKI</li>
-					<li class="addy">Address here</li>
-				</ul>
-			</div>
-		</section>
+		<header>
+  		<div class="inner">
+    		<img src="http://placehold.it/200x70/000000"/>
+    		<ul>
+      		<li>navItem1</li>
+      		<li>navItem2</li>
+      		<li>navItem3</li>
+      		<li>navItem4</li>
+    		</ul>
+  		</div>
+		</header>
+
+		<main>
+  		<img class="banner" src="images/salmon.png" />
+
+  		<ul class="sub_banners">
+    		<li><img src="http://placehold.it/300x400"/></li>
+    		<li><img src="http://placehold.it/300x400"/></li>
+    		<li><img src="http://placehold.it/300x400"/></li>
+  		</ul>
+		</main>
+
+<footer>
+</footer>
 	</body>
 </html>
