--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<header>
   		<div class="inner">
-    		<img src="http://placehold.it/200x70/000000"/>
+    		<img src="images/chinook.jpg"/>
     		<ul>
       		<li>navItem1</li>
       		<li>navItem2</li>
@@ -18,12 +18,15 @@
 		</header>
 
 		<main>
+			<h1 id="title">
+				Pam's Nastay Cookies
+			</h1>
   		<img class="banner" src="images/salmon.png" />
 
   		<ul class="sub_banners">
-    		<li><img src="http://placehold.it/300x400"/></li>
-    		<li><img src="http://placehold.it/300x400"/></li>
-    		<li><img src="http://placehold.it/300x400"/></li>
+    		<li><img src="images/shirt.jpg"/></li>
+    		<li><img src="images/cutter.jpeg"/></li>
+    		<li><img src="images/frosted-cookie.jpg"/></li>
   		</ul>
 		</main>
 
