--- a/sales.html
+++ b/sales.html
@@ -12,11 +12,11 @@
 				<label for="storeName">Store Name: </label>
 				<input id="storeName" type="text" name="storeName" size="15" />
 				<label for="min">Minimum Customers Per Hour: </label>
-				<input id="min" type="text" name="min" size="4" />
+				<input id="min" type="number" name="min" size="4" />
 				<label for="max">Maximum Customers Per Hour: </label>
-				<input id="max" type="text" name="max" size="4" />
+				<input id="max" type="number" name="max" size="4" />
 				<label for="avg">Average Number of Cookies Purchased: </label>
-				<input id="avg" type="text" name="avg" size="4" />
+				<input id="avg" type="number" name="avg" size="4" />
 				<input type="submit" name="submitButton" />
 			</fieldset>
 		</form>
