--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   		<div class="inner">
     		<img src="images/chinook.jpg"/>
     		<ul>
-      		<li>navItem1</li>
-      		<li>navItem2</li>
-      		<li>navItem3</li>
-      		<li>navItem4</li>
+      		<li>Blog</li>
+      		<li>Announcements</li>
+      		<li>Like us on MySpace!</li>
+      		<li>Follow our LiveJournal!</li>
     		</ul>
   		</div>
 		</header>
@@ -24,13 +24,27 @@
   		<img class="banner" src="images/salmon.png" />
 
   		<ul class="sub_banners">
-    		<li><img src="images/shirt.jpg"/></li>
-    		<li><img src="images/cutter.jpeg"/></li>
-    		<li><img src="images/frosted-cookie.jpg"/></li>
+    		<li><img src="images/shirt.jpg"/>BUY BUY BUY!</li>
+    		<li><img src="images/cutter.jpeg"/>Authentic Homemade Recipe!</li>
+    		<li><img src="images/frosted-cookie.jpg"/><span></span>Made with the finest powderized salmon!  These little cookies pack an omega-3 fatty acid lovetap to your dome!</li>
   		</ul>
+			<section id="history">
+				<h2>Pam's Nastay Cookies is a <em>Family</em> Business!</h2>
+				<p>Pam's Nastay Cookies(tr) has been family owned and operated since 1066 A.D. and will continue to be.  Pam developed his recipe at home, and then decided to share his delicious creation with the rest of the world!</p>
+				<img src="images/family.jpg"/>
 		</main>
 
 <footer>
+	<div class="footer_inner">
+		<img src="images/fish.jpg"/>
+		<ul class="footer_banners">
+			<li>First And Pike</li>
+			<li>SeaTac Airport</li>
+			<li>Seattle Center</li>
+			<li>Capitol Hill</li>
+			<li>Alki</li>
+		</ul>
+	</div>
 </footer>
 	</body>
 </html>
