fontpage mostly done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       		<li>Blog</li>
       		<li>Announcements</li>
       		<li>Like us on MySpace!</li>
-      		<li>Follow our LiveJournal!</li>
+      		<li><a href="">Contact Us!</a></li>
     		</ul>
   		</div>
 		</header>
@@ -25,7 +25,7 @@
 
   		<ul class="sub_banners">
     		<li><img src="images/shirt.jpg"/>BUY BUY BUY!</li>
-    		<li><img src="images/cutter.jpeg"/>Authentic Homemade Recipe!</li>
+    		<li><img src="images/cutter.jpeg"/>Authentic <em>Homemade</em> Recipe!</li>
     		<li><img src="images/frosted-cookie.jpg"/><span></span>Made with the finest powderized salmon!  These little cookies pack an omega-3 fatty acid lovetap to your dome!</li>
   		</ul>
 			<section id="history">
