cool(lame) css animation

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
   		<img class="banner" src="images/salmon.png" />
 
   		<ul class="sub_banners">
-    		<li><img src="images/shirt.jpg"/>BUY BUY BUY!</li>
+    		<li><img src="images/shirt.jpg"/>BUY! BUY! BUY!</li>
     		<li><img src="images/cutter.jpeg"/>Authentic <em>Homemade</em> Recipe!</li>
-    		<li><img src="images/frosted-cookie.jpg"/><span></span>Made with the finest powderized salmon!  These little cookies pack an omega-3 fatty acid lovetap to your dome!</li>
+    		<li><img src="images/frosted-cookie.jpg"/><span></span>Made with the finest powderized salmon!  These little cookies pack an omega-3 fatty acid love-tap to your dome!</li>
   		</ul>
 			<section id="history">
 				<h2>Pam's Nastay Cookies is a <em>Family</em> Business!</h2>
-				<p>Pam's Nastay Cookies(tr) has been family owned and operated since 1066 A.D. and will continue to be.  Pam developed his recipe at home, and then decided to share his delicious creation with the rest of the world!</p>
+				<p>Pam's Nastay Cookies(tr) has been family owned and operated since 1066 A.D. and will continue to be.  Pam developed her recipe at home, and then decided to share his delicious creation with the rest of the world!</p>
 				<img src="images/family.jpg"/>
 		</main>
 
