JS to index, buy beginnings

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   		<img class="banner" src="images/salmon.png" />
 
   		<ul class="sub_banners">
-    		<li><img src="images/shirt.jpg"/>BUY! BUY! BUY!</li>
+    		<li id="buy"><img src="images/shirt.jpg"/>BUY! BUY! BUY!</li>
     		<li><img src="images/cutter.jpeg"/>Authentic <em>Homemade</em> Recipe!</li>
     		<li><img src="images/frosted-cookie.jpg"/><span></span>Made with the finest powderized salmon!  These little cookies pack an omega-3 fatty acid love-tap to your dome!</li>
   		</ul>
@@ -46,5 +46,6 @@
 		</ul>
 	</div>
 </footer>
+	<script src="main.js"></script>
 	</body>
 </html>
