building out files, content

--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
       		<li>Blog</li>
       		<li>Announcements</li>
       		<li>Like us on MySpace!</li>
-      		<li><a href="">Contact Us!</a></li>
+      		<li><a href="contact.html">Contact Us!</a></li>
     		</ul>
   		</div>
 		</header>
 
 		<main>
-			<h1 id="title">
-				Pam's Nastay Cookies
-			</h1>
+			<h1 id="title">Pam's Nastay Cookies</h1>
   		<img class="banner" src="images/salmon.png" />
 
   		<ul class="sub_banners">
@@ -30,7 +28,7 @@
   		</ul>
 			<section id="history">
 				<h2>Pam's Nastay Cookies is a <em>Family</em> Business!</h2>
-				<p>Pam's Nastay Cookies(tr) has been family owned and operated since 1066 A.D. and will continue to be.  Pam developed her recipe at home, and then decided to share his delicious creation with the rest of the world!</p>
+				<p>Pam's Nastay Cookies(tr) has been family owned and operated since 1066 A.D. and will continue to be.  Pam developed her recipe at home, and then decided to share his delicious creation with the rest of the world!  Pam's Salmon Cookies(R) are made with only the finest ingredients from the Pacfic Northwest.  Our salmon is wild, fished from the rivers fed by the majestic Cascade Mountains, our all natural, vegan, gluten-free non-flour flour was hand crafted by the most arrogant-humble hipster you have ever met.</p>
 				<img src="images/family.jpg"/>
 		</main>
 
