--- a/sales.html
+++ b/sales.html
@@ -28,12 +28,15 @@
 				<label for="avg">Average # of Cookies Purchased: </label>
 				<input id="avg" class="set_width" type="number" name="avg"/>
 				<p></p>
-				<input type="submit" name="submitButton" />
+				<input type="submit" name="submitButton"/>
 			</fieldset>
 		</form>
 		<p></p>
 		<table id="DataTable"></table>
-		<footer>Codefellows 201</footer>
+		<fieldset id="genSales">
+			<input type="submit" id="genSalesBtn" name="genSales" value="Generate New Sales Data"/>
+			<footer>Codefellows 201</footer>
+		</fieldset>
     <script src="app.js"></script>
 	</body>
 </html>
