gen new sales data button

--- a/sales.html
+++ b/sales.html
@@ -32,9 +32,11 @@
 			</fieldset>
 		</form>
 		<p></p>
-		<table id="DataTable"></table>
+		<section id="tableArea">
+			<table id="DataTable"></table>
+		</section>
 		<fieldset id="genSales">
-			<input type="submit" id="genSalesBtn" name="genSales" value="Generate New Sales Data"/>
+			<input type="button" id="genSalesBtn" name="genSales" value="Generate New Sales Data"/>
 			<footer>Codefellows 201</footer>
 		</fieldset>
     <script src="app.js"></script>
