new text, folders

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="style.css"/>
+		<link type="text/css" rel="stylesheet" href="css/style.css"/>
+		<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 		<title>David Smith Week 2 Lab</title>
 	</head>
 	<body>
@@ -9,41 +10,39 @@
   		<div class="inner">
     		<img src="images/chinook.jpg"/>
     		<ul>
-      		<li>Blog</li>
       		<li>Announcements</li>
-      		<li>Like us on MySpace!</li>
+      		<li>Sign up for our Newsletter</li>
       		<li><a href="contact.html">Contact Us!</a></li>
     		</ul>
   		</div>
 		</header>
 
 		<main>
-			<h1 id="title">Pam's Nastay Cookies</h1>
+			<h1 id="title">Pam's Slammin' Salmon Cookies</h1>
   		<img class="banner" src="images/salmon.png" />
 
   		<ul class="sub_banners">
-    		<li id="buy"><img src="images/shirt.jpg"/>BUY! BUY! BUY!</li>
+    		<li id="buy"><a href="orderform.html"><img src="images/shirt.jpg"/>Merchandise</a></li>
     		<li><img src="images/cutter.jpeg"/>Authentic <em>Homemade</em> Recipe!</li>
-    		<li><img src="images/frosted-cookie.jpg"/><span></span>Made with the finest powderized salmon!  These little cookies pack an omega-3 fatty acid love-tap to your dome!</li>
+    		<li><img src="images/frosted-cookie.jpg"/><span></span>Made with the finest powderized salmon!  These little cookies pack an omega-3 fatty acid love-tap to your dome!  Your brain will thank you!</li>
   		</ul>
 			<section id="history">
-				<h2>Pam's Nastay Cookies is a <em>Family</em> Business!</h2>
-				<p>Pam's Nastay Cookies(tr) has been family owned and operated since 1066 A.D. and will continue to be.  Pam developed her recipe at home, and then decided to share her delicious creation with the rest of the world!  Pam's Salmon Cookies(R) are made with only the finest ingredients from the Pacfic Northwest.  Our salmon is wild, fished from the rivers fed by the majestic Cascade Mountains, our all natural, vegan, gluten-free non-flour flour was hand crafted by the most arrogant-humble hipster you have ever met.</p>
+				<h2>Pam's Slammin' Salmon Cookies is a <em>Family</em> Business!</h2>
+				<p>Pam's Slammin' Salmon Cookies&reg; has been family owned and operated since 2015 and will continue to be.  Pam developed her recipe at home, and then decided to share her delicious creation with the rest of the world!  Pam's Salmon Cookies&reg; are made with only the finest ingredients from the Pacfic Northwest.  Our salmon is wild, fished from the rivers fed by the majestic Cascade Mountains, and our cookies are hand crafted by local artisan bakers.</p>
 				<img src="images/family.jpg"/>
 		</main>
-
-<footer>
-	<div class="footer_inner">
-		<img src="images/fish.jpg"/>
-		<ul class="footer_banners">
-			<li>First And Pike</li>
-			<li>SeaTac Airport</li>
-			<li>Seattle Center</li>
-			<li>Capitol Hill</li>
-			<li>Alki</li>
-		</ul>
-	</div>
-</footer>
-	<script src="main.js"></script>
+		<footer>
+			<div class="footer_inner">
+				<img src="images/fish.jpg"/>
+				<ul class="footer_banners">
+					<li>First And Pike</li>
+					<li>SeaTac Airport</li>
+					<li>Seattle Center</li>
+					<li>Capitol Hill</li>
+					<li>Alki</li>
+				</ul>
+			</div>
+		</footer>
+		<script src="js/main.js"></script>
 	</body>
 </html>
