--- a/orderform.html
+++ b/orderform.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="orderform.css"/>
+		<link type="text/css" rel="stylesheet" href="css/orderform.css"/>
 		<title>Order Form</title>
 	</head>
 	<body>
