--- a/sales.html
+++ b/sales.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="sales-style.css"/>
+		<link type="text/css" rel="stylesheet" href="css/sales-style.css"/>
 		<title>David Smith Week 2 Lab</title>
 	</head>
 	<body>
@@ -35,10 +35,12 @@
 		<section id="tableArea">
 			<table id="DataTable"></table>
 		</section>
-		<fieldset id="genSales">
+		<div id="gen">
 			<input type="button" id="genSalesBtn" name="genSales" value="Generate New Sales Data"/>
-			<footer>Codefellows 201</footer>
-		</fieldset>
-    <script src="app.js"></script>
+		</div>
+		<footer>
+			<p>Codefellows 201</p>
+		</footer>
+    <script src="js/app.js"></script>
 	</body>
 </html>
