--- a/orderform.html
+++ b/orderform.html
@@ -15,33 +15,32 @@
   		</div>
 		</header>
     <h1>Order Form</h1>
-    <form id=orderForm>
+    <form id="orderForm">
       <fieldset>
 				<p>Order Cookies!</p>
 				<label for="name">Name: </label>
 				<input id="name" type="text" name="name"/>
 				<p></p>
 				<label for="addy">Address: </label>
-				<input id="addy" type="text" name="addy"/>
+				<input id="addy" type="text" name="addy" required="required"/>
 				<label for="city">City, State: </label>
-				<input id="city" type="text" name="addy"/>
+				<input id="city" type="text" name="addy" required="required"/>
 				<label for="zip">Zip: </label>
-				<input id="zip" type="text" name="addy"/>
+				<input id="zip" type="text" name="addy" required="required"/>
 				<p>Payment Method</p>
-				<select name="cardtype">
+				<select name="cardtype" id="cardtype">
 					<option value="visa">Visa</option>
 					<option value="mc">Mastercard</option>
 					<option value="amex">American Express</option>
 				<select>
-
-				<label for="number">CC#: </label>
-				<input id="number" type="text" name="number"/>
-				<label for="Exp Date">Expiration Date: </label>
-				<input id="exp" type="text" name="exp"/>
+				<label for="number">CC# (no dashes): </label>
+				<input id="number" type="text" name="number" required="required"/>
+				<label for="Exp Date">Expiration Date (mmyy): </label>
+				<input id="exp" type="text" name="exp" required="required" maxlength="4"/>
 				<p></p>
 				<input type="submit" name="submitButton"/>
       </fieldset>
     </form>
-		<script src="js/orderform.js"
+		<script src="js/orderform.js"></script>
 	</body>
 </html>
