--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     		<ul>
       		<li>Announcements</li>
       		<li>Sign up for our Newsletter</li>
-      		<li><a href="contact.html">Contact Us!</a></li>
-					<li><img class='socialeffect' src="images/facebook-icon.png"></li>
+      		<li><a href="#">Contact Us!</a></li>
+					<li><img class='socialeffect' src="images/facebook-icon.png"/></li>
     		</ul>
   		</div>
 		</header>
-
 		<main>
 			<img class="banner" src="images/salmon.png" />
 			<h1 id="title">Pam's Slammin' Salmon Cookies</h1>
@@ -30,6 +29,7 @@
 				<h2>Pam's Slammin' Salmon Cookies is a <em>Family</em> Business!</h2>
 				<p>Pam's Slammin' Salmon Cookies&reg; has been family owned and operated since 2015 and will continue to be.  Pam developed her recipe at home, and then decided to share her delicious creation with the rest of the world!  Pam's Salmon Cookies&reg; are made with only the finest ingredients from the Pacfic Northwest.  Our salmon is wild, fished from the rivers fed by the majestic Cascade Mountains, and our cookies are hand crafted by local artisan bakers.</p>
 				<img src="images/family.jpg"/>
+			</section>
 		</main>
 		<footer>
 			<div class="footer_inner">
