--- a/orderform.html
+++ b/orderform.html
@@ -32,7 +32,7 @@
 					<option value="visa">Visa</option>
 					<option value="mc">Mastercard</option>
 					<option value="amex">American Express</option>
-				<select>
+				</select>
 				<label for="number">CC# (no dashes): </label>
 				<input id="cc" type="text" name="cc" required="required" pattern="[0-9]*"/>
 				<label for="Exp Date">Expiration Date (mmyy): </label>
